--- a/spring-boot-tutorial-Messaging-with-Websockets-and-STOMP/pom.xml
+++ b/spring-boot-tutorial-Messaging-with-Websockets-and-STOMP/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.caveofprogramming</groupId>
+	<groupId>pl.jaceksysiak</groupId>
 	<artifactId>spring-boot-tutorial-Messaging-with-Websockets-and-STOMP</artifactId>
 	<version>1.0</version>
 
@@ -236,7 +236,7 @@
 					<assembleDirectory>target</assembleDirectory>
 					<programs>
 						<program>
-							<mainClass>com.caveofprogramming.App</mainClass>
+							<mainClass>pl.jaceksysiak.App</mainClass>
 							<name>webapp</name>
 						</program>
 					</programs>
